--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "spear_benchmarks"]
 	path = spear_benchmarks
 	url = ssh://pamd.sc.fsu.edu/~efb06/repos/spear_benchmarks.git
+[submodule "prospectus"]
+	path = prospectus
+	url = ssh://pamd.sc.fsu.edu/~efb06/repos/prospectus.git
