Putting publication details into a separate section/chapter.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "prospectus"]
 	path = prospectus
 	url = ssh://pamd.sc.fsu.edu/~efb06/repos/prospectus.git
+[submodule "fsu_2012"]
+	path = fsu_2012
+	url = git@github.com:bollig/fsu_2012.git
